[tool.poetry]
name = "github-agent"
version = "0.1.0"
description = ""
authors = ["Caco Ossandon <jossandonstanke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.202"
openai = "^0.27.8"
pygithub = "^1.58.2"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.pylint.MASTER]
max-line-length = 100